# Trinity

./: .gitignore  README.md
sketches/akka.net/01 HelloWorld/: App.config  HelloWorld.csproj  HelloWorld.sln  Program.cs
sketches/akka.net/02 HelloFSharp/: AssemblyInfo.fs  HelloFSharp.fsproj  HelloFSharp.sln  Program.fs
sketches/akka.net/03 MessageChannel/: App.config  AssemblyInfo.fs  MessageChannel.fsproj  MessageChannel.sln  Program.fs  packages.config
sketches/akka.net/04 Messages/: AssemblyInfo.fs  Messages.fsproj  Messages.sln  NuGet.Config  Program.fs  packages.config
sketches/akka.net/05 AkkaTalk/: AkkaTalk.sln
sketches/antlr/csv/: csv.g4  data.csv
sketches/asp/eCollector/: README.md  angular.json  package-lock.json  package.json
sketches/asp/server.asp/: Program.cs  Startup.cs  server.asp.csproj
sketches/asp/tour-of-heroes/: angular.json  package-lock.json
sketches/cmake/Application/: CMakeLists.txt
sketches/datagrid/AsyncLoad/: AsyncLoad.sln
sketches/dbus/Chat/: Chat.pro
sketches/dotnetpro/Highrise/: Highrise.pro  buildingcontroller.cpp  buildingcontroller.h  floorsmodel.cpp  floorsmodel.h  highrise.xml  main.cpp  main.qml  qml.qrc  todo.md
sketches/dotnetpro/Window/: Window.pro  main.cpp  main.qml  maincontroller.cpp  maincontroller.h
sketches/qt/statemachine/: statemachine.pro
src/Grauchy.android/app/: build.gradle  proguard-rules.pro
src/grauchy/: build.pro
src/grauchy.old/src/: src.pro
src/grauchy/doc/: grauchy.xmind
src/grauchy/grauchy/: grauchy.pro  main.py  qml.qrc
src/sysprep/: configure.sh  sysrep.xml
(+469 files in other folders)
